Updated for AE9. Fnf support and 2 unique starters

--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -5,66 +5,25 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact1} 
+\cardbackground{Minion-witch} 
+\cardimage{n1} 
+\cardtitle{Daughter of Doom} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money{}. Place the next card gained this turn into your hand.} 
+\cardcontent{When this is dealt 2 or less damage in a single instance, place a barrier token on Diatribe of Despair.} 
 \cardprice{0} 
+\cardhp{35} 
+\sync{0.15}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact2} 
+\cardbackground{Minion-witch} 
+\cardimage{n1} 
+\cardtitle{Matron of Malice} 
 \cardborder{} 
-\cardcontent{\Cast: Deal 6 damage.} 
+\cardcontent{When this is dealt 3 or more damage in a single instance, place a barrier token on Melody of Madness.} 
 \cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact3} 
-\cardborder{} 
-\cardcontent{Gain 2 charges. \newline After the next time you activate your ability this turn, deal 3 damage.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact4} 
-\cardborder{} 
-\cardcontent{Gravehold gains 2 life. \newline \Or \newline Any player gains 2 life.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact5} 
-\cardborder{} 
-\cardcontent{\Attach this to any player's breach. \newline When a spell is cast from this breach, the player who cast that spell gains 1 charge.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact6} 
-\cardborder{} 
-\cardcontent{\small {This spell must be prepped to two adjacent breaches so that this card touches both breaches. This fully occupies both breaches.} \newline \small {\Cast: Deal 4 damage. You may place this card into your hand.}} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{Reliquary} 
-\cardtitle{Artifact7} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 4 damage. \newline You may return to your hand up to two cards in your discard pile that cost 0 \Money{}.} 
-\cardprice{0} 
+\cardhp{45} 
+\sync{0.14}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
