--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -5,230 +5,272 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{Daughters} 
-\cardtitle{Melody of Madness} 
+\cardbackground{Minion} 
+\cardimage{n2} 
+\cardtitle{Meteoric Cataclysm} 
 \cardborder{} 
-\cardcontent{\Power 7: Gravehold suffers 9 damage. The players collectively lose 4 charges.  \newline Instead of discarding this, place 5 power tokens on it.} 
+\cardcontent{\Immediately: Destroy all the cards in the most expensive gem supply pile. \newline \Persistent: Unleash twice.} 
 \cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{Daughters} 
-\cardtitle{Diatribe of Doom} 
-\cardborder{} 
-\cardcontent{\Power 12: Any player suffers 9 damage. The players collectively discard 5 cards. \newline Instead of discarding this, place 5 power tokens on it.} 
-\cardprice{0} 
+\cardhp{8} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{Daughters} 
-\cardtitle{Daughter of Doom} 
+\cardimage{n2} 
+\cardtitle{Disarming Cataclysm} 
 \cardborder{} 
-\cardcontent{When this is dealt 3 or less damage in a single instance, place a barrier token on the other witch and that gains 1 charge.} 
+\cardcontent{\Immediately: The nemesis gains 5 life. For each life the nemesis is unable to gain, Gravehold suffers 1 damage. \newline \Persistent: The players collectively discard two cards in hand and Gravehold suffers 2 damage.} 
 \cardprice{0} 
-\cardhp{40} 
+\cardhp{8} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{Daughters} 
-\cardtitle{Matron of Malice} 
+\cardimage{n2} 
+\cardtitle{Monstrous Cataclysm} 
 \cardborder{} 
-\cardcontent{When this is dealt 3 or more damage in a single instance, place a barrier token on the other witch and that player focuses a breach.} 
+\cardcontent{\Immediately: Destroy all the cards in the most expensive relic supply pile. \newline \Persistent: Gravehold suffers damage equal to this minion's current number of shields. If this has no shields, it gains 1 shield.} 
 \cardprice{0} 
-\cardhp{40} 
+\cardhp{1} 
+\cardshield{3} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Behemoth} 
-\cardtitle{Blizzard} 
+\cardimage{n2} 
+\cardtitle{Obsession of Precision} 
 \cardborder{} 
-\cardcontent{\Power 4: Gravehold suffers 6 damage. Discard 3 yetilings in a single segment of the cave. \newline Place 4 power tokens on this instead of discarding it.} 
+\cardcontent{During any player's main phase, that player may discard one prepped spell that costs 2 \Money{} or more to add 2 power tokens to this. \newline \Power 4: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 5.} 
 \cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession1} 
+\cardimage{n2} 
+\cardtitle{Obsession of Wealth} 
 \cardborder{} 
-\cardcontent{Gain a card that costs 5 or more.} 
-\cardprice{3} 
+\cardcontent{During any player's main phase that player may discard two prepped spells to add 2 power tokens to this. \newline \Power 2: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 3.} 
+\cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession2} 
+\cardimage{n2} 
+\cardtitle{Obsession of Intricacy} 
 \cardborder{} 
-\cardcontent{Cast two spells in one turn that both cost 3 or less. } 
-\cardprice{3} 
+\cardcontent{During any player's main phase, that player may discard a relic in hand that costs 2 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
+\cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession3} 
+\cardimage{n2} 
+\cardtitle{Obsession of Perfection} 
 \cardborder{} 
-\cardcontent{Gain 7 \Money{} in one turn.} 
-\cardprice{3} 
+\cardcontent{During any player's main phase, that player may discard a gem in hand that costs 4 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
+\cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession4} 
+\cardimage{n2} 
+\cardtitle{Obsession of Strength} 
 \cardborder{} 
-\cardcontent{Cast a spell from an opened III or IV breach.} 
-\cardprice{3} 
+\cardcontent{During any player's main phase, that player may lose 2 charges to add 3 power tokens to this. \newline \Power 2: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 3.} 
+\cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession5} 
+\cardimage{n2} 
+\cardtitle{Obsession of Dominance} 
 \cardborder{} 
-\cardcontent{Play 2 or more relics on their turn.} 
-\cardprice{3} 
+\cardcontent{During any player's main phase, that player may discard a card in hand that costs 5 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. Do not discard this from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{n2} 
+\cardtitle{Spiney Trobek} 
+\cardborder{} 
+\cardcontent{Players cannot add power tokens to obsessions while this is in play. \newline \Persistent: Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{8} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{n9} 
+\cardtitle{Viralix} 
+\cardborder{} 
+\cardcontent{\Persistent: If the players collectively have fewer than 4 infections, reveal the top card of the infection deck, then any player gains that infection. Otherwise, the nemesis gains 1 nemesis token.} 
+\cardprice{2} 
+\cardhp{9} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{n9} 
+\cardtitle{Blisterkin} 
+\cardborder{} 
+\cardcontent{When a player deals 4 or more damage to this minion in a single instance, that player resolves one of their infections. \newline \Persistent: Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{9} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Obsession6} 
+\cardimage{n9} 
+\cardtitle{Bubbling Veins} 
 \cardborder{} 
-\cardcontent{Use an ability.} 
-\cardprice{3} 
+\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 3: Reveal the top two cards of the infection deck. The players collectively gain those infections.} 
+\cardprice{1} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{n9} 
+\cardtitle{Plague Bringer} 
+\cardborder{} 
+\cardcontent{\Immediately: This minion suffers damage equal to the number of players in the game. \newline \Persistent: Gravehold suffers 2 damage. \newline \Or \newline Reveal the top card of the infection deck. The player with the fewest infections gains that infection.} 
+\cardprice{1} 
+\cardhp{7} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Apocalypse Ritual} 
+\cardimage{n1} 
+\cardtitle{Melody of Madness 1p} 
 \cardborder{} 
-\cardcontent{\To Discard: Spend 8 \Money{}. \newline \Power 2: Gravehold suffers 5 damage for each nemesis turn order card in the turn order discard pile.} 
-\cardprice{3} 
+\cardcontent{\Power 10: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 5 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Dire Abbatoir} 
+\cardimage{n1} 
+\cardtitle{Diatribe of Despair 1p} 
 \cardborder{} 
-\cardcontent{\To Discard: Spend 8 \Money{}. \newline \Power 2: The player with the most life suffers damage equal to their current life.} 
+\cardcontent{\Power 4: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 5 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Melody of Madness 2p} 
+\cardborder{} 
+\cardcontent{\Power 12: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 6 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Diatribe of Despair 2p} 
+\cardborder{} 
+\cardcontent{\Power 6: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 6 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Melody of Madness 3p} 
+\cardborder{} 
+\cardcontent{\Power 14: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 7 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Diatribe of Despair 3p} 
+\cardborder{} 
+\cardcontent{\Power 8: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 7 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Melody of Madness 4p} 
+\cardborder{} 
+\cardcontent{\Power 16: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 8 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{n1} 
+\cardtitle{Diatribe of Despair 4p} 
+\cardborder{} 
+\cardcontent{\Power 10: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 8 power tokens to this card.} 
+\cardprice{0} 
+\sync{0.26}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{Upgraded-Basic} 
+\cardtitle{Lightning Surge} 
+\cardborder{} 
+\cardcontent{\Power 1: Unleash twice. The player with the most charges suffers 2 damage for each charge they have.} 
 \cardprice{3} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Attack} 
-\cardimage{Reliquary} 
-\cardtitle{Cataclysmic Fate} 
+\cardimage{n5} 
+\cardtitle{Encrust} 
 \cardborder{} 
-\cardcontent{Unleash twice. \newline The player with the most prepped spells suffers 1 damage for each of their prepped spells.} 
-\cardprice{3} 
+\cardcontent{Unleash. \newline Fuse a card. \newline Fuse a card. \newline Place two \Money{} tokens on a card in stasis.} 
+\cardprice{2} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{Reliquary} 
-\cardtitle{Engulf} 
+\cardbackground{Attack} 
+\cardimage{n5} 
+\cardtitle{Flash Freeze} 
 \cardborder{} 
-\cardcontent{\To Discard: Destroy a prepped spell that costs 5 \Money{} or more and a breach in which it was prepped. \newline \Power 1: The player with the lowest life suffers 4 damage.} 
+\cardcontent{Place a card from the most expensive spell supply pile into stasis. Repeat this twice.} 
 \cardprice{3} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{Reliquary} 
-\cardtitle{Monstrosity of Omens} 
+\cardimage{n5} 
+\cardtitle{Withered Prophet} 
 \cardborder{} 
-\cardcontent{<small>When damage is dealt to this minion, reduce that damage to 1.</small> \newline <small>\Persistent Gravehold suffers damage equal to this minion's current life.</small>} 
+\cardcontent{\Persistent: Unleash. Fuse a card.} 
 \cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{Reliquary} 
-\cardtitle{Gallowskulk} 
-\cardborder{} 
-\cardcontent{\Persistent The player with the lowest life suffers 3 damage.} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection1} 
-\cardborder{} 
-\cardcontent{Suffer 1 damage.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection2} 
-\cardborder{} 
-\cardcontent{Lose 1 charge.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection3} 
-\cardborder{} 
-\cardcontent{Discard a card in hand.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection4} 
-\cardborder{} 
-\cardcontent{Reveal the top card of your deck. If it costs more than 0 \Money{}, discard it.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection5} 
-\cardborder{} 
-\cardcontent{Discard a prepped spell.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection6} 
-\cardborder{} 
-\cardcontent{Discard a gem in hand.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection7} 
-\cardborder{} 
-\cardcontent{Discard a spell in hand.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{Infecter} 
-\cardtitle{Infection8} 
-\cardborder{} 
-\cardcontent{Place your most expensive card in hand on top of your deck.} 
-\cardprice{0} 
+\cardhp{15} 
+\sync{0.26}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
