--- a/ZXcList4.tex
+++ b/ZXcList4.tex
@@ -4,4 +4,59 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}
+\begin{center}\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m9} 
+\cardtitle{Unsealed Essence} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. If you have not activated your ability this game, gain 1 additional \Money{}.} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m8} 
+\cardtitle{Synapse Tendril} 
+\cardborder{} 
+\cardcontent{While prepped once per turn during your main phase, you may spend 2 Knowledge. If you do, deal 2 damage. \Cast: Deal 4 damage.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m8} 
+\cardtitle{Synapse Tendril} 
+\cardborder{} 
+\cardcontent{While prepped once per turn during your main phase, you may spend 2 Knowledge. If you do, deal 2 damage. \Cast: Deal 4 damage.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m8} 
+\cardtitle{Arc of Intellect} 
+\cardborder{} 
+\cardcontent{\Cast: You may spend 1 Knowledge. If you do, divide damage done by this spell however you choose. Deal 6 damage.} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m8} 
+\cardtitle{Arc of Intellect} 
+\cardborder{} 
+\cardcontent{\Cast: You may spend 1 Knowledge. If you do, divide damage done by this spell however you choose. Deal 6 damage.} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m8} 
+\cardtitle{Ancient Secrets} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. You may lose any amount of Knowledge. For each knowledge lost this way, deal 1 additional damage.} 
+\cardprice{7} 
+\end{tikzpicture}
+\hspace{-4mm}
+\end{center}
+\end{document}
