--- a/charBoard.tex
+++ b/charBoard.tex
@@ -58,7 +58,7 @@
 }
 
 \newcommand{\notes}[1]{
-	\node[text width=10.5cm, left] at (\squarewidth-.5, \squareheight*.1 - 1) {\textbf{Notes:} #1};
+	\node[text width=10.5cm, left] at (\squarewidth-.5, \squareheight*.1 - 1) {\footnotesize \textbf{Notes:} #1};
 }
 
 \newcommand{\name}[2]{
