--- a/charSheetAlcheim.tex
+++ b/charSheetAlcheim.tex
@@ -4,11 +4,11 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Alcheim}
-\ability{Restabilize: Activate during any player's turn: When that player casts a spell, it deals 2 additional damage for each reagent you have in hand. Destroy all reagents in hand at the end of their casting phase and draw 1 card for each reagent destroyed this way.}{6}
-\startingDeck{Crack Geode}{Crystal}{Crystal}{Crystal}{Spark}
+\name{Alcheim}{m1}
+\ability{Restabilize: Activate during any ally's turn: Destroy up to three cards in hand. Draw a card for each card destroyed this way. When a player casts a spell this turn, it deals 1 additional damage for each card that costs 1 \Money{} or more destroyed this way.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Crack Geode}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Shuffle the reagent deck and place it facedown.}
+\notes{Shuffle the geode deck and place it facedown. When a geode is destroyed, place it on the bottom of the geode deck.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
