--- a/charSheetBethrow.tex
+++ b/charSheetBethrow.tex
@@ -4,11 +4,11 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Bethrow}
-\ability{Imbue Swiftness: Active during any player's main phase: That player gains 2 \Money{} tokens. \Money{} tokens are worth 1 additional \Money{} until end of turn. Place any cards gained this turn into any player's hand.}{6}
+\name{Bethrow}{m3}
+\ability{Imbue Swiftness: Activate during your main phase: If Gravehold has 20 life or more, Gravehold loses 2 life and any player gains 6 \Money{} tokens. Otherwise, Gravehold gains 5 life.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spilt Light}{Spark}
 \startingHand{Spilt Light}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{}
+\notes{Bethrow's III breach is the Essence breach. When a spell is cast from the opened Essence breach, it deals an additional 1 damage and any ally gains a \Money{} token.}
 \startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{2}{rent3.png}{1}
 \end{tikzpicture}
 
