--- a/charSheetCondito.tex
+++ b/charSheetCondito.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Condito}{m10}
-\ability{Barrage: Activate during your main phase: Draw 2 conduits from Condito's Forgotten Conduit Deck. Place one into your hand. Return the remaining one to the bottom of its deck.}{4}
+\ability{Conduify: Activate during your main phase: Draw the top card from Condito's Forgotten Conduit Deck. \newline \Or \newline Destroy a conduit in play. If you do, deal 8 damage.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Redirector}{Crystal}{Crystal}{Crystal}{Crystal}
 \notes{Shuffle the Forgotten Conduit deck together and place it next to Condito's breach mat. This deck contains conduits of cost ~7.}
-\startingPrep{}{1}{rent1.png}{2}{rent2.png}{1}{rent3.png}{4}
+\startingPrep{}{1}{rent1.png}{2}{rent2.png}{4}{rent3.png}{4}
 \end{tikzpicture}
 
  \end{document}
