--- a/charSheetDendra.tex
+++ b/charSheetDendra.tex
@@ -4,11 +4,11 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Dendra}
+\name{Dendra}{m2}
 \ability{Overflow: Active during any player's main phase: That player gains any number of cards in the developed zone. \newline \Or \newline Place 3 Dev tokens distributed across up to 3 supply piles.}{5}
-\startingDeck{Destablium}{Crystal}{Crystal}{Crystal}{Crystal}
+\startingDeck{Destablium}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Destablium}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Dendra's I breach is the Flourishing breach. When a spell is cast from the flourishing breach, place a Dev token on the top card of any supply pile. When a card has a Dev token on it, that card may be developed for half its cost, rounded up. Remove all Dev tokens from a card when it's gained. If a card is gained with more than 1 Dev token, each Dev token after the first gives the player who develops that card 1 charge.}
+\notes{Dendra's II breach is the Flourishing breach. When a spell is cast from the flourishing breach, place a Dev token on the top card of any supply pile. While a card has a dev token on it, that card may be developed for half its cost, rounded up. This doesn't change existing development costs. When a card with dev tokens on it is gained, the player who gained that card gains 1 charge for each dev token on it after the first. Then, discard all dev tokens on that card.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
