--- a/charSheetDezmodia.tex
+++ b/charSheetDezmodia.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Dezmodia}
-\ability{Void Vortex: Activate during your main phase: Any ally draws two cards. Then, place any number of cards in your hand into their hand. Then, that ally places the same number of cards in hand into your hand.}{4}
+\name{Dezmodia}{m4}
+\ability{Tempest Sigil: Activate during your main phase: Any player destroys an opened breach and returns any spells prepped to that breach to their hand. That player gains an evolution token.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Swirling Darkness}
-\notes{When Dezmodia is exhausted, she does not discard her breach. Try: Any number of spells may be prepped to her opened IV breach.}
-\startingPrep{}{1}{}{1}{}{1}{rent3.png}{2}
+\startingHand{Suction Shard}{Crystal}{Crystal}{Spark}{Spark}
+\notes{Evolution tokens: Whenever you gain a charge, gain an additional charge. Draw 1 extra card per turn. Spells cast deal +1 damage. When you gain aether, gain 1 additional aether. When you suffer damage, suffer 1 less damage.}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
