--- a/charSheetDezmodia2.tex
+++ b/charSheetDezmodia2.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Dezmodia2}
-\ability{Void Vortex: Activate during your main phase: Each ally draws one card. Then, each ally preps any number of spells that cost 1 \Money{} or more to Dezmodia's Void breach.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Swirling Darkness}
-\notes{Dezmodia's IV breach is the Void Breach. Place spells that cost 1 \Money{} or more cast from the Void Breach into any player's discard pile. Spells cast from the Void Breach deal 1 additional damage.}
-\startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{2}
+\name{Dezmodia2}{m5}
+\ability{Tempest Sigil: Activate during your main phase: Any player destroys an opened breach and returns any spells prepped to that breach to their hand. That player gains a random Tier 2 treasure or a Tier 3 treasure. Starting with tier 2 treasure, alternating with each ability use}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Suction Shard}{Crystal}{Crystal}{Spark}{Spark}
+\notes{}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
