--- a/charSheetHumongo.tex
+++ b/charSheetHumongo.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Humongo}
-\ability{Humongify: Activate during your main phase: If you have 7 or more knowledge, flip the Humongo token to the Humongous side.}{5}
-\startingDeck{Manifest}{Crystal}{Crystal}{Crystal}{Spark}
+\name{Humongo}{m9}
+\ability{Humongify: Activate during your main phase: Flip the Humongo token to the Humongous side and resolve its effects. If you've already used your ability 1 or more times tihs game, gain 4 life and place the card you gained from using your ability into your hand even if that card is destroyed.}{6}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Manifest}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Place the Humongo token on the miniature side. \newline When the Humongo token is flipped to the Humongous side: Open all of your breaches. Draw 3 cards from the humongo deck. Add 2 to your hand. For the rest of the game, your spells deal 1 additional damage and when you would gain charges, any ally gains those charges instead.}
-\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{2}
+\notes{The Humongo token starts on the miniature side. When the Humongo token is flipped to the Humongous side: Your maximum life is 14. Gain 4 life. Draw 3 cards from the humongo deck. Add 1 to your hand. For the rest of the game, whenever 'any player' suffers damage, you suffer that damage instead. When you have 0 life, do not resolve on-exhaust effects. You may still gain life even when you have 0 life to become unexhausted.}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
