--- a/charSheetInco.tex
+++ b/charSheetInco.tex
@@ -4,11 +4,11 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Inco}
-\ability{Massive Growth: Activate during your main phase: \newline Cast any number of Barbs prepped by any number of players. Those spells deal 2 additional damage.}{5}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Verdant Mulch}
-\startingHand{Crystal}{Crystal}{Crystal}{Verdant Mulch}{Spark}
-\notes{Set aside all of the Barb cards. These cards form the Barb deck. This is not a supply pile. Cards in this deck can be gained using Inco's Verdant Mulch. Additionally, Inco may spend 2 \Money{} to gain a card from this deck.}
+\name{Inco}{m7}
+\ability{Massive Growth: Activate during your main phase: \newline Any player places all Rose Thorns in their deck and discard pile into their hand.}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Emerald of Vigor}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Set aside all of the Rose Thorn cards. These cards form the Rose Thorn deck. This is not a supply pile. Cards in this deck can be gained using Inco's Verdant Emerald. Additionally, Inco may spend 5 \Money{} to gain a card from this deck. Rose thorn is 5 cost spell that deals 4 damage.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
