--- a/charSheetMazahedron.tex
+++ b/charSheetMazahedron.tex
@@ -4,11 +4,11 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Mazahedron}
-\ability{Underearth Mantra: Activate during your main phase: Any player places one of their unique starter cards into hand from discard pile or deck. Repeat this. Gain 1 knowledge. Any ally gains 2 charges.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Fragment of Earth}{Crystal}{Crystal}{Spark}{Spark}
-\notes{}
+\name{Mazahedron}{m5}
+\ability{Mantra of Earth: Activate during any player's main phase: Gain a card that costs 4 \Money{} or less from any supply pile. Any ally gains a destiny token. \newline \Or \newline Any player returns a Destiny token to its supply and draws 5 cards.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
+\startingHand{Fragment of Earth}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Set the destiny tokens face-up next to this mat. When a player gains a destiny token, they place that token in front of them. For the rest of the game, that player resolves all their destiny tokens at the end of their turn after refilling their hand.}
 \startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
