--- a/charSheetThraxir.tex
+++ b/charSheetThraxir.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Thraxir}
-\ability{Unveil: Activate during any ally's main phase: That player gains 6 \Money{} that can only be used to open or focus breaches. When a breach is opened this turn, gain a card with cost up to 2 times more than the focus cost of the opened breach and place it into your hand. \newline \Or \newline If that player has no closed breaches, deal 10 damage.}{6}
+\name{Thraxir}{m6}
+\ability{Unveil: Activate during any player's main phase: That player focuses a breach. Then, you gain a card from the supply with a cost up to twice the focus cost of their open breach with the highest focus cost. \newline \Or \newline If that player has no closed breaches, deal 8 damage.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Infuser}{Crystal}{Crystal}{Spark}{Spark}
-\notes{}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
+\startingHand{Infuser}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Thraxir's IV breach is the Annihilation breach. Spells cast from Thraxir's Annihilation breach deal 1 additional damage for each other opened breach Thraxir has.}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
