--- a/tikzcardsTwo.tex
+++ b/tikzcardsTwo.tex
@@ -3,6 +3,7 @@
 
 \newcommand{\And}{\textbf{AND} \newline}
 \newcommand{\Cast}{\textbf{Cast}}
+\newcommand{\Defeated}{\textbf{DEFEATED}}
 \newcommand{\Persistent}{\textbf{PERSISTENT}}
 \newcommand{\Discard}{\textbf{DISCARD}}
 \newcommand{\To}{\textbf{TO~}}
@@ -135,7 +136,7 @@
 }
 
 \newcommand{\sync}[1]{
-	\node at (\cardwidth-2*\stripwidth-.20, \stripwidth) {v#1};
+	\node at (\cardwidth*.87, \cardheight*.9) {\tiny{#1}};
 }
 
 \newcommand{\cardborder}{
