--- a/ZxFnF.tex
+++ b/ZxFnF.tex
@@ -15,22 +15,22 @@
 \draw[ultra thick] (\cardwidth/2, \cardheight/2) rectangle (0, \cardheight);}
 \newcommand{\name}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight-\offset*2) {\LARGE{#1}};}
 \newcommand{\setup}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.87) {\large \textbf{Setup:} #1};}
-\newcommand{\unleash}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.67) {\large \textbf{Unleash:} #1};}
-\newcommand{\difficulty}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.20) {\textbf{Additional Difficulty Rules:} #1};}
 \newcommand{\rules}[1]{\node at (\cardwidth*.7, \cardheight/2+10) ; \node[text width = 7 cm] at (\cardwidth*3/4, \cardheight/2+2) {\large \textbf{Rules:} #1};}
+\newcommand{\ability}[1]{\node[text width = \tw] at (\cardwidth/4, \cardheight*.7) {\large \textbf{Ability:} #1};}
 \newcommand{\image}[1]{\includegraphics[height = .8cm]{#1}}
-\newcommand{\hp}[1]{\textbf{#1} \image{heart}}
-\newcommand{\diffR}[1]{\node[text width = \tw] at (\cardwidth*.9, \cardheight*.95) {\textbf{Difficulty Rating:} #1};}
+\newcommand{\type}[1]{#1}
+\newcommand{\abilitycost}[1]{#1}
+\newcommand{\sync}[1]{\node[text width = \tw] at (\cardwidth*.8, \cardheight*.2) {\large \textbf{Version:} #1};}
+
 \begin{document}
 \begin{center}
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{The Infecter \image{N9} \hp{60}};
+\name{The Infecter \image{N9} \type{friend}};
 \setup{Shuffle and place the infection deck next to this mat facedown. }
-\unleash{If the nemesis has 0 nemesis tokens, it gains a nemesis token, reveal the top card of the infection deck, and then the player with the fewest infections gains that infection. Otherwise, each player resolves all of their infections, and the nemesis loses a nemesis token.}
-\difficulty{}
-\rules{Infections stay in front of players permanently. newline When a player is exhausted, that player gains two infections instead of Unleash twice. If a player would gain an infection and cannot, each player resolves all of their infections instead.};\diffR{};
+\ability{\abilityname{AbilityName: \abilitycost{5}} \newline The player with the fewest gems in hand gains a Cursed Shard, places it into their hand, and suffers 1 damage for each gem in hand.}
+\rules{Infections stay in front of players permanently. newline When a player is exhausted, that player gains two infections instead of Unleash twice. If a player would gain an infection and cannot, each player resolves all of their infections instead.};
 \end{tikzpicture}
 
 
