--- a/charSheetQu.tex
+++ b/charSheetQu.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Qu}
-\ability{Combust Aether: Activate at the start of your draw phase: Draw three cards.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Call of the Void}
-\notes{}
-\startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{2}{rent3.png}{2}
+\name{Qu}{m9}
+\ability{Duality Embrace: Activate during your main phase: \newline Reset an opened breach to its starting position. If you do, gain cards from any supply pile equal to the number of the breach - 1. If you're in Taker form, place them on top of your deck. If you're in Giver form, place them into any ally's hand.}{6}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
+\startingHand{Molded Valite}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Form token has Giver and Taker sides. Giver: When you gain a card, place it on top of any ally's deck and focus your closed breach with the lowest cost. Then flip this token. Taker: When an ally gains a card, Qu may gain that card instead. If she does, that ally gains 1 charge. Then flip this token.}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
