--- a/charSheetRaven.tex
+++ b/charSheetRaven.tex
@@ -4,12 +4,12 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Raven}
-\ability{Ancestral Caress: Activate during your main phase: Gain 4 knowledge. Reveal the top 3 cards of the Forgotten Ritual deck. You may gain any number of the revealed cards by paying their cost using Knowledge. Place the gained cards into your hand. Place the rest on the bottom of the Forgotten Ritual deck.}{5}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\notes{Raven's I & II Breaches are the Mind Extract breaches. When a spell is cast from this breach, Raven gains 1 Knowledge. If that spell dealt damage to the nemesis, Raven gains 1 additional Knowledge. Raven's III breach is the Discovery breach. When Raven casts a spell from the Discovery breach, she draws 2 cards from the Forgotten Ritual deck and may gain 1 card by paying its cost with Knowledge.}
-\startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{4}{rent3.png}{2}
+\name{Raven}{m8}
+\ability{Exhume: Activate during your main phase: Gain 4 knowledge. Reveal the top 3 cards of the Forgotten Ritual deck. You may gain any number of the revealed cards by paying their cost using Knowledge. Place the gained cards into your hand. Place the rest on the bottom of the Forgotten Ritual deck.}{5}
+\startingDeck{Raven's Eye}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Raven's Eye}{Crystal}{Crystal}{Spark}{Spark}
+\notes{Raven's breaches are the Archive breaches. Spells cast from an open Archive breach give the caster 1 knowledge. Shuffle the Forgotten Ritual deck and place it next to this mat. The top card of the Forgotten Ritual deck is always revealed. Cards can only be gained from the Forgotten Ritual deck using knowledge.}
+\startingPrep{own0.png}{1}{rent1.png}{3}{rent2.png}{4}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
